<!-- Strings extracted from hard coded values -->
<resources>
    <string name="app_name">BelenskiD1_GPA_Calculator</string>
    <string name="GPA">GPA</string>
    <string name="compute_gpa">Compute GPA</string>
    <string name="course_5">Course 5</string>
    <string name="gpa_calculator">GPA Calculator</string>
    <string name="course_1">Course 1</string>
    <string name="course_1_grade">Course 1 Grade</string>
    <string name="course_2_grade">Course 2 Grade</string>
    <string name="course_3_grade">Course 3 Grade</string>
    <string name="course_2">Course 2</string>
    <string name="course_3">Course 3</string>
    <string name="course_4">Course 4</string>
    <string name="course_4_grade">Course 4 Grade</string>
    <string name="course_5_grade">Course 5 Grade</string>
</resources>
