<?xml version="1.0" encoding="utf-8"?>

<!-- main activity screen -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Text view for resulting GPA -->

    <!-- Button to activate the computation/clearing of fields -->

    <!-- Course number display -->

    <!-- Course number display -->

    <!-- Course number display -->

    <!-- Course number display -->

    <!-- Course number display -->

    <!-- App title view -->

    <TextView
        android:id="@+id/GPATextView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/GPA"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearAndComputeButton" />

    <Button
        android:id="@+id/clearAndComputeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="check"
        android:text="@string/compute_gpa"
        app:layout_constraintBottom_toTopOf="@+id/GPATextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course5EditText" />

    <TextView
        android:id="@+id/course5TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="492dp"
        android:text="@string/course_5"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/course5EditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course3TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="291dp"
        android:text="@string/course_3"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/course3EditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="111dp"
        android:text="@string/course_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/course1EditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- grade input -->

    <!-- grade input -->

    <!-- grade input -->

    <!-- grade input -->

    <!-- grade input -->

    <TextView
        android:id="@+id/course2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/course_2"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/course2EditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpa_calculator"
        app:layout_constraintBottom_toTopOf="@+id/course1EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/course1EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_1_grade"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/course1TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course1TextView"
        app:layout_constraintTop_toTopOf="@+id/course1TextView" />

    <EditText
        android:id="@+id/course2EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_2_grade"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/course2TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course2TextView"
        app:layout_constraintTop_toTopOf="@+id/course2TextView" />

    <EditText
        android:id="@+id/course3EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_3_grade"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/course3TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course3TextView"
        app:layout_constraintTop_toTopOf="@+id/course3TextView" />

    <EditText
        android:id="@+id/course4EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_4_grade"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/course4TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course4TextView"
        app:layout_constraintTop_toTopOf="@+id/course4TextView" />

    <TextView
        android:id="@+id/course4TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="389dp"
        android:text="@string/course_4"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/course4EditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/course5EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_5_grade"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/course5TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course5TextView"
        app:layout_constraintTop_toTopOf="@+id/course5TextView" />
</androidx.constraintlayout.widget.ConstraintLayout>